Fixing header section width on tablet

--- a/src/themes/hello-theme-child/src/scss/components/header.scss
+++ b/src/themes/hello-theme-child/src/scss/components/header.scss
@@ -8,7 +8,7 @@
         }
     }
 
-    @media (min-width: 768px) {
+    @media (min-width: 1025px) {
         .elementor-top-column:first-child,
         .elementor-top-column:last-child{
             width: 40%!important;
